# asio

asio/socket_code_extraction/: CMakeLists.txt  README.md  dtls_sketch.cpp  self_signed_cert.hpp  udp_async_connected.cpp  udp_async_demo.cpp  udp_async_sketch.cpp  udp_echo_test.cpp  udp_simple_test.cpp
asio/socket_code_extraction/core_sockets/: README.md  basic_datagram_socket.md  basic_socket.md  basic_socket_acceptor.md  basic_stream_socket.md  socket_base.md
asio/socket_code_extraction/diagrams/: asio_socket_hierarchy.md  async_operation_flow.md  buffer_management.md  platform_architecture.md  resolver_flow.md  tcp_connection_lifecycle.md
asio/socket_code_extraction/examples_and_tests/: README.md
asio/socket_code_extraction/examples_and_tests/async_patterns/: async_tcp_server.cpp
asio/socket_code_extraction/examples_and_tests/basic_examples/: tcp_client_server.cpp  udp_client_server.cpp
asio/socket_code_extraction/examples_and_tests/integration_examples/: http_client_server.cpp
asio/socket_code_extraction/examples_and_tests/performance_tests/: socket_benchmarks.cpp
asio/socket_code_extraction/examples_and_tests/testing_framework/: socket_tests.cpp
asio/socket_code_extraction/ip_protocols/: address_v4_implementation.md  address_v6_implementation.md  endpoint_implementation.md  icmp_protocol.md  ip_addressing_overview.md  protocol_comparison.md  tcp_protocol.md  udp_protocol.md
asio/socket_code_extraction/platform_specific/linux/: README.md  epoll_reactor_implementation.md  io_uring_advanced_features.md  io_uring_implementation.md  linux_networking_overview.md  reactor_pattern_deep_dive.md
asio/socket_code_extraction/platform_specific/macos/: README.md  kqueue_example_code.md  kqueue_implementation_details.md  kqueue_reactor_overview.md  (+2 more)
asio/socket_code_extraction/ssl_tls/: README.md  context_management.md  openssl_integration.md  practical_examples.md  socket_integration.md  ssl_tls_analysis.md  stream_implementation.md  verification_system.md
(+12 files in other folders)
